@@ -7,6 +7,9 @@ debian-installer (20040531) UNRELEASED; urgency=low
       scsi-core-modules to the powerpc 2.6 cdrom initrds. Should actually
       work now.
     - Add pcmcia udebs to powerpc net_drivers floppy.
+    - Move $(TREE)/usr/lib/kernel-image-$(KERNELVERSION) out of the way to
+      $(TEMP)/lib when building boot images. powerpc subarchitectures that
+      need to use mkvmlinuz should now be able to do so.
   * Joey Hess
     - Split out a new cyrllic root floppy on i386 as the regular root floppy
       is full again.
